--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,8 +2,8 @@
 efast_url=http://openapi.baotayun.com/openapi/webefast/web/?app_act=openapi/router
 efast_key=f2889c8118cada8a52965d087da5d088
 efast_secret=1feb581b4302688911584998fd8e66d9
-
-
+#线下vip订单数据的拉取地址
+offline_url=http://58.210.143.138:6081/xiuniang-server-0.0.1-SNAPSHOT/servlet/getviporderbytime?start_time=
 
 youzan_increase_point_url=https://open.youzan.com/api/entry/youzan.crm.customer.points/3.0.0/increase?
 youzan_decrease_point_url=https://open.youzan.com/api/entry/youzan.crm.customer.points/3.0.0/decrease?
