--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,11 +8,10 @@
 
     <display-name>xiuniang_sync_server</display-name>
 
-    <!-- 指定Spring Bean的配置文件所在目录。默认配置在WEB-INF目录下 -->
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring/spring-context.xml</param-value>
-    </context-param>
+     <context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath*:spring/spring-mybatis.xml</param-value>
+	</context-param>
     
     <!-- Log4j配置-->
 	<context-param>
