--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,8 +4,17 @@ efast_key=f2889c8118cada8a52965d087da5d088
 efast_secret=1feb581b4302688911584998fd8e66d9
 #线下vip订单数据的拉取地址
 offline_url=http://58.210.143.138:6081/xiuniang-server-0.0.1-SNAPSHOT/servlet/getviporderbytime?start_time=
+dianyuan_url=http://58.210.143.138:6081/xiuniang-server-0.0.1-SNAPSHOT/servlet/DianyuanInfoServlet
+
 
 youzan_increase_point_url=https://open.youzan.com/api/entry/youzan.crm.customer.points/3.0.0/increase?
 youzan_decrease_point_url=https://open.youzan.com/api/entry/youzan.crm.customer.points/3.0.0/decrease?
 youzan_appid=31fd6f63e6a4a9d527
 youzan_secret=3c1259fff6ac558929c01a2800613013
+
+wx_appid=wxa4de3c29bddd316e
+wx_appsecret=6d5dd9526242c753746ae3a8b54affe6
+wx_token=5c1489a85abae7fe504c9c44
+wx_aeskey=1df38e365b52c4eaadfaeb98f8f1d34c663199e6a16
+wx_membership_card_id=pGIF7t597yTxck6eYAyHB7XvMtlU
+
