--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 	<groupId>com.xiuniang</groupId>
 	<artifactId>xiuniang_sync_server</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.1</version>
 	<name>xiuniang_sync_server</name>
 	<url>http://maven.apache.org</url>
 
 	<!-- 定义maven变量 -->
 	<properties>
 		<!-- weixin-java-tools version -->
-		<weixin-java-mp.version>2.7.3.BETA</weixin-java-mp.version>
+		<weixin-java-mp.version>2.7.0</weixin-java-mp.version>
 		<guava.version>19.0</guava.version>
 		<!-- spring -->
 		<spring.version>4.3.2.RELEASE</spring.version>
@@ -22,9 +22,6 @@
 
 		<!-- mybatis版本号 -->
 		<mybatis.version>3.2.6</mybatis.version>
-
-		<!-- log -->
-		<commons-logging.version>1.1.3</commons-logging.version>
 
 		<!-- Servlet -->
 		<servlet.version>3.0.1</servlet.version>
@@ -222,6 +219,14 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.2</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+		<dependency>
+		    <groupId>commons-logging</groupId>
+		    <artifactId>commons-logging</artifactId>
+		    <version>1.2</version>
+		</dependency>
+		
 
 		<!-- HttpClient -->
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
@@ -269,7 +274,6 @@
 		</dependency>
 
 
-
 		<!-- test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -277,6 +281,14 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>qrcode</groupId>
+			<artifactId>qrcode</artifactId>
+			<version>1.0</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
@@ -292,7 +304,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<finalName>xiuniang_sync_server</finalName>
+		<finalName>ROOT</finalName>
 	</build>
 
 
