--- a/src/main/resources/mybatis/jdbc.properties
+++ b/src/main/resources/mybatis/jdbc.properties
@@ -4,5 +4,8 @@ jdbc.driver=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
 #\u672c\u5730\u73af\u5883
 jdbc.url=jdbc:mysql://localhost:3306/xiuniang?useUnicode=true&characterEncoding=UTF-8
+#jdbc.username=chuliang
+#jdbc.password=chu907684290
+
 jdbc.username=linkage
 jdbc.password=!QAZ2wsx
