增加会员领取和激活事件的监听，百盛会员卡开卡逻辑的增加，增加微信授权页面设计， 完善用户再会员卡中的查看按钮事件

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,6 @@
+#项目url域名
+application_url=http://xiuniang.yaxin-nanjing.com/
+
 #efast线上订单数据的接口参数
 efast_url=http://openapi.baotayun.com/openapi/webefast/web/?app_act=openapi/router
 efast_key=f2889c8118cada8a52965d087da5d088
@@ -5,7 +8,8 @@ efast_secret=1feb581b4302688911584998fd8e66d9
 #线下vip订单数据的拉取地址
 offline_url=http://58.210.143.138:6081/xiuniang-server-0.0.1-SNAPSHOT/servlet/getviporderbytime?start_time=
 dianyuan_url=http://58.210.143.138:6081/xiuniang-server-0.0.1-SNAPSHOT/servlet/DianyuanInfoServlet
-
+# vip同步到百盛的接口
+SYNCVIPINFO_INFO_URL=http://58.210.143.138:6081/xiuniang-server-0.0.1-SNAPSHOT/servlet/syncVipInfo
 
 youzan_increase_point_url=https://open.youzan.com/api/entry/youzan.crm.customer.points/3.0.0/increase?
 youzan_decrease_point_url=https://open.youzan.com/api/entry/youzan.crm.customer.points/3.0.0/decrease?
