--- a/pom.xml
+++ b/pom.xml
@@ -220,12 +220,12 @@
 			<version>1.7.2</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
+		<!-- https://mvnrepository.com/artifact/commons-logging/commons-logging 
 		<dependency>
 		    <groupId>commons-logging</groupId>
 		    <artifactId>commons-logging</artifactId>
 		    <version>1.2</version>
-		</dependency>
+		</dependency>-->
 		
 
 		<!-- HttpClient -->
