--- a/src/main/resources/mybatis/jdbc.properties
+++ b/src/main/resources/mybatis/jdbc.properties
@@ -3,7 +3,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 validationQuery=SELECT 1
 #\u672c\u5730\u73af\u5883
-jdbc.url=jdbc:mysql://localhost:3306/xiuniang?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/xiuniang?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true 
 #jdbc.username=chuliang
 #jdbc.password=chu907684290
 
