--- a/pom.xml
+++ b/pom.xml
@@ -288,6 +288,15 @@
 			<version>1.0</version>
 		</dependency>
 		
+		
+		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+		<dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		    <version>2.9.0</version>
+		</dependency>
+		
+		
 	</dependencies>
 	<build>
 		<plugins>
